# gutenberg-chatbot

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
models/: pride_and_prejudice_vocab.json
src/gutenberg_chatbot/: model.py  model_bootstrap.py
src/gutenberg_chatbot/training/: training.py
static/: main.css
