[project]
name = "gutenberg-chatbot"
version = "0.1.0"
description = "Project Gutenberg Chatbot app"
readme = "README.md"
authors = [
    { name = "DeepBlockDeepak", email = "jordan.medina1729@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.2",
    "torch>=2.6.0",
]

# pausing here until proper entry point is set up
# [project.scripts]
# gutenberg-chatbot = "gutenberg_chat_bot:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gutenberg_chatbot"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.9.4",
]
