[project]
name = "gutenberg-chatbot"
version = "0.1.0"
description = "Project Gutenberg Chatbot app"
readme = "README.md"
authors = [
    { name = "Jordan Medina", email = "jordan.medina1@csuglobal.edu" }
]

requires-python = ">=3.10"

dependencies = [
    "taipy>=4.0.2",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gutenberg_chatbot"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
]
